--- a/project-1/index.html
+++ b/project-1/index.html
@@ -10,7 +10,7 @@
 <body>
   <h1>Flying Toys For Beginners Adults and Children[Complete Guide]</h1>
   <p>
-  	Both adults and children are fascinated by things that fly. Toys are an exciting way to explore and interact and understand how things fly.
+  	Both adults and children are fascinated by things that fly. Toys are an exciting way to explore, interact and understand how things fly.
   </p>
   <h2>Glider Planes</h2>
   <h2>Rockets</h2>
