Add Project2:section 2

--- a/project-2/index.html
+++ b/project-2/index.html
@@ -32,28 +32,29 @@
         </div>
       </div>
     </div>
-    <div class="container text-center">
-      <div class="row">
-        <div class="col-lg-4">
-          <div class="card">
-            <h3>Build credit as you go</h3>
-            <img src="" alt="">
-            <p>We designed our loan process to fit your needs and help you grow. As you build credit with Branch, you unlock larger loan amounts.</p>
+    <div class="container-fluid">
+      <div class="container text-center py-3">
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="p-5 mb-4" style="background-color:#f2f2f2;">
+              <h3>Build credit<br /> as you go</h3>
+              <img src="images/icon_1.png" alt="" class="py-5">
+              <p>We designed our loan process to fit your needs and help you grow. As you build credit with Branch, you unlock larger loan amounts.</p>
+            </div>
           </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="card">
-            <h3>Unlimited free transfers from your wallet</h3>
-            <img src="" alt="">
-            <p>With the Branch Wallet, you can send and receive payments with your friends and family, at no cost.</p>
+          <div class="col-lg-4">
+            <div class="p-5" style="background-color:#f2f2f2;">
+              <h3>Unlimited free transfers <br/> from your wallet</h3>
+              <img src="images/icon_5.png" alt="" class="py-5">
+              <p>With the Branch Wallet, you can send and receive payments with your friends and family, at no cost.</p>
+            </div>
           </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="card">
-            <h3>Pay bills instantly</h3>
-            (Launching soon)
-            <img src="" alt="">
-            <p>Easily pay bills and purchase airtime and data bundles direct from your Branch Wallet. Transact on the go and enjoy instant purchases.</p>
+          <div class="col-lg-4">
+            <div class="p-5" style="background-color:#f2f2f2;">
+              <h3>Pay bills instantly <br /> (Launching soon)</h3>
+              <img src="images/icon_6.png" alt="" class="py-5">
+              <p>Easily pay bills and purchase airtime and data bundles direct from your Branch Wallet. Transact on the go and enjoy instant purchases.</p>
+            </div>
           </div>
         </div>
       </div>
